replace List.of usage